--- a/src/features/home/home.component.html
+++ b/src/features/home/home.component.html
@@ -1,3 +1,3 @@
 <div class="flex justify-content-center">
-    <h1>Bienvenido a la tercera entrega</h1>
+    <h1>Bienvenido a la entrega final</h1>
 </div>
