--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,42 +6,46 @@
     <button *ngIf="isUserLogged" mat-icon-button aria-label="Menu icon" (click)="toggleMenu()">
         <mat-icon>menu</mat-icon>
     </button>
-    <h1>Curso Angular - Entrega final</h1>
+    <div style="display: flex; width: 100%; justify-content: space-between;">
+        <h1>Curso Angular - Entrega final</h1>
+        <h1 *ngIf="isUserLogged">{{ selectedSection }}</h1>
+        <h1 *ngIf="isUserLogged">{{ loggedUser | fullname }}</h1>
+    </div>
 </mat-toolbar>
 
 <mat-sidenav-container autosize *ngIf="isUserLogged">
     <mat-sidenav [opened]="true" mode="side">
         <mat-nav-list>
             <a mat-list-item #homeLink="routerLinkActive" routerLinkActive [activated]="homeLink.isActive"
-                routerLink="home">
+                routerLink="home" (click)="changeSection('Home')">
                 <span class="entry">
                     <mat-icon>home</mat-icon>
                     <span>Home</span>
                 </span>
             </a>
             <a mat-list-item #studentLink="routerLinkActive" routerLinkActive [activated]="studentLink.isActive"
-                routerLink="student">
+                routerLink="student" (click)="changeSection('Alumnos')">
                 <span class="entry">
                     <mat-icon>group</mat-icon>
                     <span>Alumnos</span>
                 </span>
             </a>
             <a mat-list-item #courseLink="routerLinkActive" routerLinkActive [activated]="courseLink.isActive"
-                routerLink="course">
+                routerLink="course" (click)="changeSection('Cursos')">
                 <span class="entry">
                     <mat-icon>article</mat-icon>
                     <span>Cursos</span>
                 </span>
             </a>
             <a mat-list-item #enrollmentLink="routerLinkActive" routerLinkActive [activated]="enrollmentLink.isActive"
-                routerLink="enrollment">
+                routerLink="enrollment" (click)="changeSection('Inscripciones')">
                 <span class="entry">
                     <mat-icon>assignment_turned_in</mat-icon>
                     <span>Inscripciones</span>
                 </span>
             </a>
-            <a mat-list-item #userLink="routerLinkActive" routerLinkActive [activated]="userLink.isActive"
-                routerLink="user">
+            <a *ngIf="isAdmin" mat-list-item #userLink="routerLinkActive" routerLinkActive [activated]="userLink.isActive"
+                routerLink="user" (click)="changeSection('Usuarios')">
                 <span class="entry">
                     <mat-icon>person_add</mat-icon>
                     <span>Usuarios</span>
