--- a/src/features/login/login.component.html
+++ b/src/features/login/login.component.html
@@ -2,7 +2,7 @@
     <mat-card>
         <mat-card-header>
             <mat-card-title>
-                <h1 style="font-size: 1.5rem">Iniciar sesión</h1>
+                <h1>Iniciar sesión</h1>
             </mat-card-title>
         </mat-card-header>
         <mat-card-content>
@@ -18,6 +18,9 @@
                         <mat-label>Password</mat-label>
                         <input type="password" formControlName="password" matInput />
                     </mat-form-field>
+                </div>
+                <div *ngIf="loginForm.errors?.['invalidCredentials']" class="col-12 text-red-700 pt-3 pb-5">
+                    Las credenciales son inválidas.
                 </div>
                 <div class="col-12">
                     <button class="w-full" mat-flat-button color="primary">
